[gd_scene load_steps=17 format=3 uid="uid://bbapjyvsg0fyy"]

[ext_resource type="Script" path="res://bitFolder/bat.gd" id="1_23in6"]
[ext_resource type="Texture2D" uid="uid://3dnf7p8grg2c" path="res://bitFolder/Assets/1bitDungeon/bat_enemy.png" id="2_u0c40"]

[sub_resource type="CircleShape2D" id="CircleShape2D_msuq8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5pe4o"]
radius = 8.06226

[sub_resource type="AtlasTexture" id="AtlasTexture_jurr4"]
atlas = ExtResource("2_u0c40")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy05m"]
atlas = ExtResource("2_u0c40")
region = Rect2(32, 32, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o5fp"]
atlas = ExtResource("2_u0c40")
region = Rect2(64, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0ewh"]
atlas = ExtResource("2_u0c40")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0b4pe"]
atlas = ExtResource("2_u0c40")
region = Rect2(128, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l6tu"]
atlas = ExtResource("2_u0c40")
region = Rect2(160, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcmbg"]
atlas = ExtResource("2_u0c40")
region = Rect2(192, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yuq4"]
atlas = ExtResource("2_u0c40")
region = Rect2(224, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg420"]
atlas = ExtResource("2_u0c40")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s11ty"]
atlas = ExtResource("2_u0c40")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgg2i"]
atlas = ExtResource("2_u0c40")
region = Rect2(96, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_stfui"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jurr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy05m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o5fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0ewh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0b4pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l6tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcmbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yuq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o5fp")
}],
"loop": false,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jurr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg420")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s11ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgg2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0ewh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jurr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy05m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o5fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0ewh")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
top_level = true
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_23in6")
health = 1

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_msuq8")
debug_color = Color(0.971659, 0, 0.446437, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5pe4o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_stfui")
autoplay = "default"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
